<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZConquest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="SignUp">Sign up</string>
    <string name="LoginButton">Login</string>
    <string name="LoginAndPasswordAreIncorrect">Login and password are incorrect</string>
    <string name="CouldntConnectServer">Couldn\'t connect server</string>
    <string name="GameID">Game ID</string>
    <string name="connectToGame">Connect</string>
    <string name="createGame">Create</string>
    
    <color name="Black">#000000</color>
    <color name="Text">#EEEEEE</color>
    <color name="ErrorText">#EE0000</color>

</resources>
